--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Compilar código
+    - name: Crear estructura de directorios
       run: |
-        javac -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar src/Calculadora.java test/CalculadoraTest.java
+        mkdir -p src test
+        cp lib/Calculadora.java src/
+        cp lib/CalculadoraTest.java test/
+
+    - name: Compilar código
+      run: javac -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar src/Calculadora.java test/CalculadoraTest.java
 
     - name: Ejecutar pruebas
-      run: |
-        java -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore CalculadoraTest
+      run: java -cp .:src:test:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore CalculadoraTest
