--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI con pruebas
+name: Java CI con pruebas y notificación
 
 on:
   push:
@@ -25,3 +25,10 @@ jobs:
 
     - name: Ejecutar pruebas
       run: java -cp .:src:test:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore CalculadoraTest
+
+    - name: Notificar en Slack si falla
+      if: failure()
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"❌ Fallo en el pipeline de la Calculadora Java. Revisa las pruebas en GitHub Actions."}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}
