--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -16,10 +16,11 @@ jobs:
         distribution: 'temurin'
     - name: Build
       run: |
-        javac -d target/classes src/*.java
+        mkdir -p target/classes
+        javac -cp "lib/*" -d target/classes src/*.java
     - name: Run tests
       run: |
-        java -cp target/classes:lib/* org.junit.runner.JUnitCore CalculadoraTest
+        java -cp "target/classes:lib/*" org.junit.runner.JUnitCore CalculadoraTest
 
   deploy-to-green:
     needs: test
