--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -20,9 +20,7 @@ jobs:
         javac -cp "lib/*" -d target/classes src/*.java
     - name: Run tests
       run: |
-        echo "✅ Pruebas deshabilitadas temporalmente para demostración del despliegue"
-        echo "Las pruebas se habilitarán en la siguiente iteración"
-        # java -cp "target/classes:lib/*" org.junit.runner.JUnitCore CalculadoraTest
+        java -cp "target/classes:lib/*" org.junit.runner.JUnitCore CalculadoraTest
 
   deploy-to-green:
     needs: test
