fix: Usar Railway CLI directamente en lugar de acción no existente

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Only to Railway - Blue Green
+name: Deploy to Railway - Blue Green
 
 on:
   push:
@@ -16,9 +16,12 @@ jobs:
         javac -cp "lib/*" -d target/classes src/*.java
         echo "✅ Aplicación compilada exitosamente"
     
-    - name: Deploy to Green Environment
-      uses: bervProject/railway-action@v1.0.3
-      with:
-        token: ${{ secrets.RAILWAY_TOKEN }}
-        environment: production
-        service: calculadora-green
+    - name: Install Railway CLI
+      run: |
+        npm install -g @railway/cli
+        
+    - name: Deploy to Green
+      run: |
+        railway login --token ${{ secrets.RAILWAY_TOKEN }}
+        railway switch --project calculadora-green
+        railway deploy
