--- a/.github/workflows/blue-green-deploy.yml
+++ b/.github/workflows/blue-green-deploy.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Debug - Show current directory
+      run: pwd && ls -la
+    
+    - name: Debug - Check if source files exist
+      run: |
+        echo "Checking source files:"
+        ls -la src/ || echo "No src directory"
+        ls -la lib/ || echo "No lib directory"
+    
     - name: Build application
       run: |
         mkdir -p target/classes
@@ -17,6 +26,9 @@ jobs:
     
     - name: Install Railway CLI
       run: npm install -g @railway/cli
+    
+    - name: Debug - Check Railway CLI installation
+      run: railway --version
     
     - name: Deploy to Green Project
       run: railway deploy
