--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,12 @@
-[build]
+echo '[build]
 builder = "nixpacks"
-buildCommand = "mkdir -p target/classes && javac -cp 'lib/*' -d target/classes src/*.java"
+buildCommand = "mkdir -p target/classes && javac -cp \"lib/*\" -d target/classes src/*.java"
 
 [deploy]
-startCommand = "java -cp target/classes:lib/* Main"
+startCommand = "java -cp target/classes:lib/* WebCalculator"
 numReplicas = 1
 
 [[services]]
 name = "web"
-run = "java -cp target/classes:lib/* Main"
+run = "java -cp target/classes:lib/* WebCalculator"
+' > railway.toml
