fix: configure java in railway.toml

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "mkdir -p target/classes && javac -cp 'lib/*' -d target/classes src/*.java"
+buildCommand = "apt-get update && apt-get install -y openjdk-21-jdk && mkdir -p target/classes && javac -cp 'lib/*' -d target/classes src/*.java"
+
+[nixpacks]
+config = { JAVA_VERSION = "21" }
 
 [deploy]
 startCommand = "java -cp target/classes:lib/* WebCalculator"
