--- a/railway.toml
+++ b/railway.toml
@@ -8,7 +8,7 @@ numReplicas = 1
 [[services]]
 name = "web"
 run = "mvn compile exec:java -Dexec.mainClass=\"WebCalculator\""
-port = 4567
+port = 8080  # ← Cambiar de 4567 a 8080
 
 [variables]
-PORT = "4567"
+PORT = "8080"  # ← Cambiar de 4567 a 8080
